@@ -1,6 +1,7 @@
 package uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.applyforcosts;
 
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
@@ -35,6 +36,15 @@ import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.Personalisation
 @MockitoSettings(strictness = Strictness.LENIENT)
 class AdditionalEvidenceSubmittedOtherPartyNotificationPersonalisationTest {
 
+    private static final String homeOffice = "Home office";
+    private final String additionalEvidenceForCostsHoId = "additionalEvidenceForCostsHoId";
+    private final String homeOfficeEmailAddress = "homeOfficeEmailAddress@gmail.com";
+    private final String legalRepEmailAddress = "legalRepEmailAddress@gmail.com";
+    private final String appealReferenceNumber = "someReferenceNumber";
+    private final String appellantGivenNames = "someAppellantGivenNames";
+    private final String appellantFamilyName = "someAppellantFamilyName";
+    private final String customerServicesTelephone = "555 555 555";
+    private final String customerServicesEmail = "cust.services@example.com";
     @Mock
     AsylumCase asylumCase;
     @Mock
@@ -43,24 +53,18 @@ class AdditionalEvidenceSubmittedOtherPartyNotificationPersonalisationTest {
     CustomerServicesProvider customerServicesProvider;
     @Mock
     PersonalisationProvider personalisationProvider;
-
-    private Long caseId = 12345L;
-    private final String additionalEvidenceForCostsHoId = "additionalEvidenceForCostsHoId";
-    private String homeOfficeEmailAddress = "homeOfficeEmailAddress@gmail.com";
-    private String legalRepEmailAddress = "legalRepEmailAddress@gmail.com";
-    private String appealReferenceNumber = "someReferenceNumber";
-    private String legalRepRefNumber = "someLegalRepRefNumber";
-    private String appellantGivenNames = "someAppellantGivenNames";
-    private String appellantFamilyName = "someAppellantFamilyName";
-    private static String homeOffice = "Home office";
-    private String customerServicesTelephone = "555 555 555";
-    private String customerServicesEmail = "cust.services@example.com";
-    private String homeOfficeReferenceNumber = "A1234567/001";
-    private String expectedLegalRepRefNumber = "\nYour reference: someLegalRepRefNumber";
-    private String expectedHomeOfficeReferenceNumber = "\nHome Office reference: A1234567/001";
-    private String ariaReferenceNumber = "ariaReferenceNumber";
-    private String expectedAriaReferenceNumber = "\nListing reference: ariaReferenceNumber";
     private AdditionalEvidenceSubmittedOtherPartyNotificationPersonalisation additionalEvidenceSubmittedOtherPartyNotificationPersonalisation;
+
+    static Stream<Arguments> appliesForCostsProviderWithJudge() {
+        return Stream.of(
+            Arguments.of(List.of(new IdValue<>("1", new ApplyForCosts("Legal representative", "Legal representative", homeOffice, "Unreasonable costs", "24 Nov 2023"))),
+                new DynamicList(new Value("1", "Costs 1, Unreasonable costs, 24 Nov 2023"), List.of(new Value("1", "Costs 1, Unreasonable costs, 24 Nov 2023")))),
+            Arguments.of(List.of(new IdValue<>("2", new ApplyForCosts(homeOffice, homeOffice, "Legal representative", "Wasted costs", "24 Nov 2023"))),
+                new DynamicList(new Value("2", "Costs 2, Wasted costs, 24 Nov 2023"), List.of(new Value("2", "Costs 2, Wasted costs, 24 Nov 2023")))),
+            Arguments.of(List.of(new IdValue<>("3", new ApplyForCosts(homeOffice, "Tribunal", homeOffice, "Wasted costs", "24 Nov 2023"))),
+                new DynamicList(new Value("3", "Costs 3, Wasted costs, 24 Nov 2023"), List.of(new Value("3", "Costs 3, Wasted costs, 24 Nov 2023"))))
+        );
+    }
 
     @BeforeEach
     void setup() {
@@ -77,13 +81,13 @@ class AdditionalEvidenceSubmittedOtherPartyNotificationPersonalisationTest {
         additionalEvidenceSubmittedHoPersonalisationTemplate.put("appellantGivenNames", appellantGivenNames);
         additionalEvidenceSubmittedHoPersonalisationTemplate.put("appellantFamilyName", appellantFamilyName);
         additionalEvidenceSubmittedHoPersonalisationTemplate.put("appealReferenceNumber", appealReferenceNumber);
-
-        when((customerServicesProvider.getCustomerServicesTelephone())).thenReturn(customerServicesTelephone);
-        when((customerServicesProvider.getCustomerServicesEmail())).thenReturn(customerServicesEmail);
         when(personalisationProvider.getApplyForCostsPersonalisation(asylumCase)).thenReturn(additionalEvidenceSubmittedHoPersonalisationTemplate);
         when(emailAddressFinder.getLegalRepEmailAddress(asylumCase)).thenReturn(legalRepEmailAddress);
+        String homeOfficeReferenceNumber = "A1234567/001";
         when(asylumCase.read(HOME_OFFICE_REFERENCE_NUMBER, String.class)).thenReturn(Optional.of(homeOfficeReferenceNumber));
+        String legalRepRefNumber = "someLegalRepRefNumber";
         when(asylumCase.read(LEGAL_REP_REFERENCE_NUMBER, String.class)).thenReturn(Optional.of(legalRepRefNumber));
+        String ariaReferenceNumber = "ariaReferenceNumber";
         when(asylumCase.read(ARIA_LISTING_REFERENCE, String.class)).thenReturn(Optional.of(ariaReferenceNumber));
     }
 
@@ -92,9 +96,9 @@ class AdditionalEvidenceSubmittedOtherPartyNotificationPersonalisationTest {
         assertEquals(additionalEvidenceForCostsHoId, additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getTemplateId(asylumCase));
     }
 
-
     @Test
     void should_return_given_reference_id() {
+        Long caseId = 12345L;
         assertEquals(caseId + "_ADDITIONAL_EVIDENCE_OTHER_PARTY_EMAIL",
             additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getReferenceId(caseId));
     }
@@ -105,9 +109,9 @@ class AdditionalEvidenceSubmittedOtherPartyNotificationPersonalisationTest {
         when(asylumCase.read(APPLIES_FOR_COSTS)).thenReturn(Optional.of(applyForCostsList));
         when(asylumCase.read(ADD_EVIDENCE_FOR_COSTS_LIST, DynamicList.class)).thenReturn(Optional.of(addEvidenceToCostsList));
 
-        if (("Tribunal").equals(applyForCostsList.get(0).getValue().getApplyForCostsApplicantType())) {
+        if (("Tribunal").equals(applyForCostsList.getFirst().getValue().getApplyForCostsApplicantType())) {
             assertTrue(additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getRecipientsList(asylumCase).isEmpty());
-        } else if (applyForCostsList.get(0).getValue().getLoggedUserRole().equals(homeOffice)) {
+        } else if (applyForCostsList.getFirst().getValue().getLoggedUserRole().equals(homeOffice)) {
             assertTrue(additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getRecipientsList(asylumCase).contains(legalRepEmailAddress));
         } else {
             assertTrue(additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getRecipientsList(asylumCase).contains(homeOfficeEmailAddress));
@@ -117,49 +121,42 @@ class AdditionalEvidenceSubmittedOtherPartyNotificationPersonalisationTest {
     @Test
     void should_throw_exception_on_personalisation_when_case_is_null() {
 
-        assertThatThrownBy(() -> additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getPersonalisation((AsylumCase) null))
-            .isExactlyInstanceOf(NullPointerException.class)
-            .hasMessage("asylumCase must not be null");
+        NullPointerException exception =
+            assertThrows(NullPointerException.class, () -> additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getPersonalisation((AsylumCase) null));
+        assertEquals("asylumCase must not be null", exception.getMessage());
     }
 
     @ParameterizedTest
     @MethodSource("appliesForCostsProviderWithJudge")
     public void should_return_personalisation_when_all_information_given(List<IdValue<ApplyForCosts>> applyForCostsList, DynamicList addEvidenceToCostsList) {
-        when(personalisationProvider.getTypeForSelectedApplyForCosts(any(), any())).thenReturn(Map.of("appliedCostsType", applyForCostsList.get(0).getValue().getAppliedCostsType().replaceAll("costs", "").trim()));
-        when(personalisationProvider.retrieveSelectedApplicationId(any(), any())).thenReturn(Map.of("applicationId", applyForCostsList.get(0).getId()));
+        when(personalisationProvider.getTypeForSelectedApplyForCosts(any(), any())).thenReturn(Map.of("appliedCostsType", applyForCostsList.getFirst().getValue().getAppliedCostsType().replaceAll("costs", "").trim()));
+        when(personalisationProvider.retrieveSelectedApplicationId(any(), any())).thenReturn(Map.of("applicationId", applyForCostsList.getFirst().getId()));
         when(asylumCase.read(APPLIES_FOR_COSTS)).thenReturn(Optional.of(applyForCostsList));
         when(asylumCase.read(ADD_EVIDENCE_FOR_COSTS_LIST, DynamicList.class)).thenReturn(Optional.of(addEvidenceToCostsList));
 
         Map<String, String> personalisation = additionalEvidenceSubmittedOtherPartyNotificationPersonalisation.getPersonalisation(asylumCase);
 
-        assertEquals(appealReferenceNumber, personalisation.get("appealReferenceNumber"));
-        assertEquals(appellantGivenNames, personalisation.get("appellantGivenNames"));
-        assertEquals(appellantFamilyName, personalisation.get("appellantFamilyName"));
-        assertEquals(applyForCostsList.get(0).getId(), personalisation.get("applicationId"));
-        assertEquals(customerServicesTelephone, customerServicesProvider.getCustomerServicesTelephone());
-        assertEquals(customerServicesEmail, customerServicesProvider.getCustomerServicesEmail());
+        assertThat(personalisation)
+            .containsEntry("appealReferenceNumber", appealReferenceNumber)
+            .containsEntry("appellantGivenNames", appellantGivenNames)
+            .containsEntry("appellantFamilyName", appellantFamilyName)
+            .containsEntry("applicationId", applyForCostsList.getFirst().getId());
 
-        if (applyForCostsList.get(0).getValue().getLoggedUserRole().equals("Home office")) {
-            assertEquals("Wasted", personalisation.get("appliedCostsType"));
-            assertEquals("", personalisation.get("homeOfficeReferenceNumber"));
-            assertEquals(expectedLegalRepRefNumber, personalisation.get("legalRepReferenceNumber"));
-            assertEquals(expectedAriaReferenceNumber, personalisation.get("ariaListingReference"));
+        if (applyForCostsList.getFirst().getValue().getLoggedUserRole().equals("Home office")) {
+            String expectedAriaReferenceNumber = "\nListing reference: ariaReferenceNumber";
+            String expectedLegalRepRefNumber = "\nYour reference: someLegalRepRefNumber";
+            assertThat(personalisation)
+                .containsEntry("appliedCostsType", "Wasted")
+                .containsEntry("homeOfficeReferenceNumber", "")
+                .containsEntry("legalRepReferenceNumber", expectedLegalRepRefNumber)
+                .containsEntry("ariaListingReference", expectedAriaReferenceNumber);
         } else {
-            assertEquals("Unreasonable", personalisation.get("appliedCostsType"));
-            assertEquals(expectedHomeOfficeReferenceNumber, personalisation.get("homeOfficeReferenceNumber"));
-            assertEquals("", personalisation.get("legalRepReferenceNumber"));
-            assertEquals("", personalisation.get("ariaListingReference"));
+            String expectedHomeOfficeReferenceNumber = "\nHome Office reference: A1234567/001";
+            assertThat(personalisation)
+                .containsEntry("appliedCostsType", "Unreasonable")
+                .containsEntry("homeOfficeReferenceNumber", expectedHomeOfficeReferenceNumber)
+                .containsEntry("legalRepReferenceNumber", "")
+                .containsEntry("ariaListingReference", "");
         }
-    }
-
-    static Stream<Arguments> appliesForCostsProviderWithJudge() {
-        return Stream.of(
-            Arguments.of(List.of(new IdValue<>("1", new ApplyForCosts("Legal representative", "Legal representative", homeOffice, "Unreasonable costs", "24 Nov 2023"))),
-                new DynamicList(new Value("1", "Costs 1, Unreasonable costs, 24 Nov 2023"), List.of(new Value("1", "Costs 1, Unreasonable costs, 24 Nov 2023")))),
-            Arguments.of(List.of(new IdValue<>("2", new ApplyForCosts(homeOffice, homeOffice, "Legal representative", "Wasted costs", "24 Nov 2023"))),
-                new DynamicList(new Value("2", "Costs 2, Wasted costs, 24 Nov 2023"), List.of(new Value("2", "Costs 2, Wasted costs, 24 Nov 2023")))),
-            Arguments.of(List.of(new IdValue<>("3", new ApplyForCosts(homeOffice, "Tribunal", homeOffice, "Wasted costs", "24 Nov 2023"))),
-                new DynamicList(new Value("3", "Costs 3, Wasted costs, 24 Nov 2023"), List.of(new Value("3", "Costs 3, Wasted costs, 24 Nov 2023"))))
-        );
     }
 }
